<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".CreateRoomActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/CreateRoomActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MainToolbar" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CreateRoomTitleInputLayout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                android:layout_marginTop="20dp"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreateRoomActivityRoomTitleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_room_activity_room_title_hint"
                    android:textCursorDrawable="@drawable/edit_text_cursor_color"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/CreateRoomInformationInputLayout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"

                    app:counterEnabled="true"
                    app:counterMaxLength="300"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/CreateRoomActivityRoomInformationInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_room_activity_room_info_hint"
                        android:maxHeight="150dp"
                        android:overScrollMode="always"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color"

                        />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.core.widget.NestedScrollView>


            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/create_room_activity_text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/create_room_activity_recruitment_number" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyleDrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:endIconTint="@color/app_theme_color">

                    <AutoCompleteTextView
                        android:id="@+id/CreateRoomActivityNumOfPeopleInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/create_room_activity_recruitment_number"
                        android:inputType="none"
                        android:textCursorDrawable="@drawable/edit_text_cursor_color" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/CreateRoomActivityDateTextView"
                style="@style/create_room_activity_text_view_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/create_room_activity_date_and_time" />

            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/CreateRoomActivityDateInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="날짜"
                        android:inputType="none"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@color/app_theme_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/CreateRoomActivityTimeInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:hint="시간"
                        android:inputType="none"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:textCursorDrawable="@color/app_theme_color" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/create_room_activity_text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/create_room_activity_Location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/CreateRoomMapSearchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="createRoomActivityMap"
                        app:srcCompat="@drawable/ic_baseline_map_24"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/CreateRoomActivityMapView"
                android:name="com.naver.maps.map.MapFragment"
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                tools:srcCompat="@tools:sample/avatars" />



            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CreateRoomActivityGenderTextView"
                    style="@style/create_room_activity_text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/create_room_activity_gender_limit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/CreateRoomActivityMaleImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="createRoomActivityGenderLimitMale"
                        app:srcCompat="@drawable/ic_male_not_focus"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/CreateRoomActivityFemaleImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:contentDescription="createRoomActivityGenderLimitFemale"
                        app:srcCompat="@drawable/ic_female_not_focus"
                        tools:ignore="VectorDrawableCompat" />

                    <ImageView
                        android:id="@+id/CreateRoomActivityGenderAnyImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="createRoomActivityGenderLimitAny"
                        app:srcCompat="@drawable/ic_maleandfemale_not_focus"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CreateRoomActivityAgeTextView"
                    style="@style/create_room_activity_text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/create_room_activity_age_limit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyleDrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:endIconTint="@color/app_theme_color">

                        <AutoCompleteTextView
                            android:id="@+id/minimumAgeTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/create_room_activity_minimum_age"
                            android:textSize="12sp"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/create_room_activity_text_view_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.6"
                        android:text="~" />

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/LoginTextInputLayoutStyleDrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:endIconTint="@color/app_theme_color">

                        <AutoCompleteTextView
                            android:id="@+id/maximumAgeTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/create_room_activity_maximum_age"
                            android:textSize="12sp"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/CreateRoomActivityKeyWordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="키워드"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/tagAddButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="등 록"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                style="@style/create_room_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/tag_area"
                android:minHeight="30dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/emptyKeyWordTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/empty_key_word_text"
                    android:visibility="gone" />

                <co.lujun.androidtagview.TagContainerLayout
                    android:id="@+id/tagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="10dp"
                    app:container_enable_drag="false"
                    app:horizontal_interval="10dp"
                    app:tag_clickable="true"
                    app:tag_theme="pure_teal"
                    app:vertical_interval="10dp"
                    tools:ignore="MissingClass" />

            </LinearLayout>

            <Button
                android:id="@+id/CreateRoomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/app_theme_color"
                android:text="방 만들기"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>